--- a/SignUpPage.html
+++ b/SignUpPage.html
@@ -5,6 +5,10 @@
 </head>
 <body>
     <form>
+        <div class = "previousPage">
+            <a href = "Login.html">Previous Page</a>
+        </div>
+        
         <h4>First name</h4>
         <div class = "textbox">
                     <input type="text" placeholder = "First name">
