--- a/Login.html
+++ b/Login.html
@@ -9,13 +9,13 @@
             <h3>Welcome to IRemind!</h3>
             <h1>Login</h1>
             <div class = "textBox">
-                <input type ="text" placeholder = "Username">
+                <input type ="text" placeholder = "Username" id = "Username">
                 
             </div>
             <div class ="textBox">
-                <input type="Password" placeholder = "Password">
+                <input type="Password" placeholder = "Password" id = "Password">
             </div>
-            <h2><input type = "submit" value ="Login" class = "loginBtn"></h2>
+            <h2><button class = "loginBtn">Login</button></h2>
             <div class = "signup">
                 Don't have an account?
                 </br>
