--- a/Login.html
+++ b/Login.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" href = "Login.css">
     </head>
     <body>
+        <h3>Welcome to Time Drop!</h3>
         <form>
-            <h3>Welcome to IRemind!</h3>
+            
             <h1>Login</h1>
             <div class = "textBox">
                 <input type ="text" placeholder = "Username" id = "Username">
@@ -15,7 +16,8 @@
             <div class ="textBox">
                 <input type="Password" placeholder = "Password" id = "Password">
             </div>
-            <h2><button class = "loginBtn">Login</button></h2>
+            <br>
+            <button class = "loginBtn">Login</button>
             <div class = "signup">
                 Don't have an account?
                 </br>
