--- a/SignUpPage.html
+++ b/SignUpPage.html
@@ -38,26 +38,43 @@
                     <input type = "text" placeholer = "Re-enter password" id = "password2">
         </div>
     </br>
-        <button onclick = "validate" class = "loginBtn">Submit</button>
+        <button onclick = "validate()" class = "loginBtn" id = "submitButton">Submit</button>
         <script>
+            document.getElementById("submitButton").onclick = 
             function validate() 
             {
                 const pass1 = document.getElementById("password1").value;
                 const pass2 = document.getElementById("password2").value;
+                const firstName = document.getElementById("first_name").value;
+                const lastName = document.getElementById("last_name").value;
+                const email = document.getElementById("email").value;
+                const phoneNum = document.getElementById("phone_number").value;
+                const userName = document.getElementById("username").value;
+                let permanentPassword;
 
-                if(pass1.length < 8 | pass2.length < 8) 
+                if((firstName == "") || (lastName == "") || (email == "") || (phoneNum == "") || (userName == ""))
                 {
-                    alert("Password is not long enough");
-                } 
-                else if(pass1 != pass2) 
+                    alert("One or more fields is empty!");
+                }
+                else
                 {
-                    alert("Passwords do not match");
-                } 
-                else 
-                {
-                    alert("Passwords match!")
+                    if(pass1.length < 8 ) 
+                    {
+                        alert("Password is not long enough");
+                    } 
+                    else if(pass1 != pass2) 
+                    {
+                        alert("Passwords do not match");
+                    } 
+                    else 
+                    {
+                        alert("Passwords match!");
+                        permanentPassword = pass1;
+                        window.open('Import_Calendar.html', 'newwindow');
+                    }
                 }
             }
+            
         </script>
     </form>
 </body>
